syntax = "proto3";

package common;

message Chunk {
  string ChunkID = 1;
  // TODO: add more metadata
}

message ByteRange {
  uint32 start = 1;
  uint32 length = 2;
}
